--- a/.github/workflows/webapp_my-website-app.yml
+++ b/.github/workflows/webapp_my-website-app.yml
@@ -15,16 +15,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Install dependencies
-        run: cd my-web-app && npm install
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
 
       - name: npm install, build, and test
         run: |
+          cd my-web-app/package.json
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -33,13 +32,13 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: my-web-app/
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -53,15 +52,14 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_73F1F11F4ABA484AA5ED590EC5FA911D }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2983AC27BD9143AF9FF07ACB043B97E4 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_0D8EE92401324086A417FBFF5D004AEE }}
+          client-id: ${{ secrets.__clientidsecretname__ }}
+          tenant-id: ${{ secrets.__tenantidsecretname__ }}
+          subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'my-website-app'
-          slot-name: 'Production'
-          package: my-web-app/
-          
+          slot-name: 'production'
+          package: .
