--- a/.github/workflows/webapp_my-website-app.yml
+++ b/.github/workflows/webapp_my-website-app.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd ../my-web-app
+          cd my-web-app/package.json
           npm install
           npm run build --if-present
           npm run test --if-present
