--- a/.github/workflows/webapp_my-website-app.yml
+++ b/.github/workflows/webapp_my-website-app.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - my-website-app
 
 on:
@@ -23,7 +20,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd my-web-app/package.json
+          cd my-web-app
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -32,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: my-web-app/* # Ensure you upload the right contents
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,7 +38,7 @@ jobs:
       name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -62,4 +59,4 @@ jobs:
         with:
           app-name: 'my-website-app'
           slot-name: 'production'
-          package: .
+          package: my-web-app # Specify the correct path to the package
