--- a/.github/workflows/webapp_my-website-app.yml
+++ b/.github/workflows/webapp_my-website-app.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          ls my-web-app
+          cd my-web-app
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -59,4 +59,4 @@ jobs:
         with:
           app-name: 'my-website-app'
           slot-name: 'production'
-          package: ls my-web-app/build # Specify the correct path to the package
+          package: my-web-app/public # Specify the correct path to the package
