--- a/.github/workflows/webapp_my-website-app-new.yml
+++ b/.github/workflows/webapp_my-website-app-new.yml
@@ -23,15 +23,16 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd my-web-app
           npm install
           npm run build --if-present
           npm run test --if-present
-
+      
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: my-web-app/* # Ensure you upload the right contents
 
   deploy:
     runs-on: ubuntu-latest
