--- a/.github/workflows/webapp_my-website-app-new.yml
+++ b/.github/workflows/webapp_my-website-app-new.yml
@@ -1,10 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - my-website-app-new
+name: Build, Test, and Deploy Node.js app to Azure Web App - my-website-app-new
 
 on:
   push:
@@ -24,22 +18,43 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build
         run: |
           cd my-web-app
           npm install
           npm run build --if-present
-          npm run test --if-present
       
-      - name: Upload artifact for deployment job
+      - name: Upload artifact for testing job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
           path: my-web-app/* # Ensure you upload the right contents
 
-  deploy:
+  test:
     runs-on: ubuntu-latest
     needs: build
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
+
+      - name: Run tests
+        run: |
+          cd my-web-app
+          npm run test --if-present
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: my-web-app/test-results # Adjust the path to your test results
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
