--- a/.github/workflows/webapp_my-website-app-new.yml
+++ b/.github/workflows/webapp_my-website-app-new.yml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-results
-          path: my-web-app/src/App.test.js
+          path: my-web-app/*
 
   deploy:
     runs-on: ubuntu-latest
