--- a/.github/workflows/webapp_my-website-app-new.yml
+++ b/.github/workflows/webapp_my-website-app-new.yml
@@ -31,7 +31,7 @@ jobs:
           path: my-web-app/*
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
 
     steps:
@@ -53,7 +53,7 @@ jobs:
           path: my-web-app/*
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: test
     environment:
       name: 'Production'
