--- a/.github/workflows/webapp_my-website-app-new.yml
+++ b/.github/workflows/webapp_my-website-app-new.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: my-web-app/*
+          path: my-web-app # Ensure you upload the right contents
 
   test:
     runs-on: windows-latest
@@ -39,6 +39,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          path: my-web-app # Ensure the path is correct
 
       - name: Run tests
         run: |
@@ -53,7 +54,7 @@ jobs:
           path: my-web-app/*
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: test
     environment:
       name: 'Production'
@@ -64,6 +65,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          path: my-web-app
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
@@ -72,4 +74,4 @@ jobs:
           app-name: 'my-website-app-new'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5271FFBC676F41D786A795E67A1B1E29 }}
-          package: .
+          package: my-web-app
