--- a/.github/workflows/webapp_my-website-app-new.yml
+++ b/.github/workflows/webapp_my-website-app-new.yml
@@ -57,7 +57,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [build, test]
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -67,7 +67,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: my-web-app/*
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
