--- a/.github/workflows/webapp_nodewebapp.yml
+++ b/.github/workflows/webapp_nodewebapp.yml
@@ -25,6 +25,21 @@ jobs:
         run: |
           npm install
           npm run build --if-present
+
+  test:
+    runs-on: windows-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+
+      - name: npm test
+        run: |
           npm run test --if-present
       
       - name: Upload artifact for deployment job
@@ -32,10 +47,12 @@ jobs:
         with:
           name: node-app
           path: .
+      
+    
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, test]
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
