--- a/.github/workflows/webapp_asavela.yml
+++ b/.github/workflows/webapp_asavela.yml
@@ -38,7 +38,7 @@ jobs:
 
       - uses: actions/checkout@v4
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag mydockrepo:$(date +%s)
+        run: docker build . --file Dockerfile --tag mydockrepo:v1.0
 
   deploy:
     runs-on: ubuntu-latest
