--- a/.github/workflows/webapp_asavela.yml
+++ b/.github/workflows/webapp_asavela.yml
@@ -23,22 +23,27 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd /home/runner/work/Ci-CD_Pipelines/Ci-CD_Pipelines
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd /home/runner/work/Ci-CD_Pipelines/Ci-CD_Pipelines
+          zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: /home/runner/work/Ci-CD_Pipelines/Ci-CD_Pipelines/release.zip
 
       - uses: actions/checkout@v4
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag mydockrepo:v1.0
+        run: |
+          cd /home/runner/work/Ci-CD_Pipelines/Ci-CD_Pipelines
+          docker build . --file Dockerfile --tag mydockrepo:v1.0
 
   deploy:
     runs-on: ubuntu-latest
