--- a/.github/workflows/webapp_asavela.yml
+++ b/.github/workflows/webapp_asavela.yml
@@ -23,27 +23,27 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd /home/runner/work/Ci-CD_Pipelines/Ci-CD_Pipelines
+          cd my-web-app
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
         run: |
-          cd /home/runner/work/Ci-CD_Pipelines/Ci-CD_Pipelines
+          cd my-web-app
           zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: /home/runner/work/Ci-CD_Pipelines/Ci-CD_Pipelines/release.zip
+          path: release.zip
 
       - uses: actions/checkout@v4
       - name: Build the Docker image
         run: |
-          cd /home/runner/work/Ci-CD_Pipelines/Ci-CD_Pipelines
-          docker build . --file Dockerfile --tag mydockrepo:v1.0
+          cd my-web-app
+          docker build . --file Dockerfile --tag my-web-app:v1.0
 
   deploy:
     runs-on: ubuntu-latest
